apps/mailsangja/core.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: mailsangja
  labels:
    app.kubernetes.io/name: mailsangja
    app.kubernetes.io/component: core
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: mailsangja
    app.kubernetes.io/component: core
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  namespace: mailsangja
  labels:
    app.kubernetes.io/name: mailsangja
    app.kubernetes.io/component: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mailsangja
      app.kubernetes.io/component: core
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailsangja
        app.kubernetes.io/component: core
    spec:
      containers:
        - name: core
          image: ghcr.io/mailsangja/mailsangja-core:sha-e235b0ed79a50acac99ea8cf6ff7697b4116c39b
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
