apps/mailsangja/worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: mailsangja
  labels:
    app.kubernetes.io/name: mailsangja
    app.kubernetes.io/component: worker
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: http
  selector:
    app.kubernetes.io/name: mailsangja
    app.kubernetes.io/component: worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: mailsangja
  labels:
    app.kubernetes.io/name: mailsangja
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mailsangja
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailsangja
        app.kubernetes.io/component: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/mailsangja/mailsangja-worker:sha-02772e3a410217c7df5f5a6ad5580e62b647395f
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
